# aurorae

./: .kde-ci.yml  CMakeLists.txt
config/: kcm_auroraeconfig.json
po/ja/: aurorae.po
po/nb/: aurorae.po
po/nn/: aurorae.po
po/sk/: aurorae.po
po/ug/: aurorae.po
src/: CMakeLists.txt  decoration.cpp  decoration.h  decorationbutton.cpp  decorationbutton.h  decorationthemeprovider.cpp
src/lib/: auroraetheme.cpp  auroraetheme.h
v1/: CMakeLists.txt  colorhelper.h  decorationoptions.h
v1/themes/plastik/package/: metadata.json
v2/: decoration.cpp  decorationbutton.cpp  decorationtheme.cpp  util.h
